# open_manipulator_perceptions

./: .travis.yml  README.md
open_manipulator_ar_markers/: CHANGELOG.rst  CMakeLists.txt  package.xml
open_manipulator_ar_markers/launch/: ar_pose.launch
open_manipulator_ar_markers/rviz/: ar_marker.rviz
open_manipulator_camera/: CMakeLists.txt  package.xml
open_manipulator_camera/camera_info/: astra_pro.yaml  raspicam.yaml
open_manipulator_camera/launch/: astra_pro.launch  raspicam.launch  realsense_d435.launch  rpicamera.launch
open_manipulator_perceptions/: CHANGELOG.rst  CMakeLists.txt  package.xml
open_manipulator_pick_and_place/: CMakeLists.txt  package.xml
open_manipulator_pick_and_place/include/open_manipulator_pick_and_place/: open_manipulator_pick_and_place.h
open_manipulator_pick_and_place/launch/: open_manipulator_pick_and_place.launch
open_manipulator_pick_and_place/src/: open_manipulator_pick_and_place.cpp
