<?xml version="1.0"?>
<package format="2">
  <name>open_manipulator_ar_markers</name>
  <version>1.0.0</version>
  <description>
    To find AR marker, it depends ar_track_alvar packages
  </description>
  <license>Apache 2.0</license>
  <author email="thlim@robotis.com">Darby Lim</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/open_manipulator_ar_markers</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/openmanipulator</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/open_manipulator_perceptions</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/open_manipulator_perceptions/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>ar_track_alvar</depend>
  <depend>ar_track_alvar_msgs</depend>
  <depend>image_transport</depend>
  <depend>image_proc</depend>
</package>
