<?xml version="1.0"?>
<package format="2">
  <name>open_manipulator_perceptions</name>
  <version>1.0.0</version>
  <description>
    This packages are configured to related perception packages as AR marker, Object recognition and so on.
  </description>
  <license>Apache 2.0</license>
  <author email="thlim@robotis.com">Darby Lim</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/open_manipulator_perceptions</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/openmanipulator</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/open_manipulator_perceptions</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/open_manipulator_perceptions/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>open_manipulator_ar_markers</exec_depend>
  <export><metapackage/></export>
</package>
